s3に画像ファイルを保存削除できるように変更